# razer_test_test

./: Cargo.toml  README.md
src/: errors.rs  main.rs
src/cli/: get_brightness.rs  list.rs  mod.rs  set_brightness.rs  set_color.rs
src/devices/: matrix_keyboard.rs  matrix_mice.rs  mod.rs  razer_report.rs  soft_keyboard.rs
