[package]
name = "razer_test_test"
version = "0.1.0"
authors = ["Bodo Junglas <junglas@objectcode.de>"]

[dependencies]
clap = "2.32.0"
hidapi = { version = "0.5.0", default-features = false, features = [ "linux-static-hidraw" ] }
error-chain = "0.12.0"
lazy_static = "1.1.0"
hex = "0.3.2"
log = "0.4.5"
env_logger = "0.5.13"
